--- a/index.html
+++ b/index.html
@@ -1,15 +1,22 @@
 <!-- TODO 1: Create the HTML Boilerplate -->
-
+<h1>Erfan Bensaeed</h1>
+<h2>I'm an engineer and web developer</h2>
+<hr />
 <!-- TODO 2: Add Your previous projects' HTML into the public folder -->
-
+<h2>Bellow you can see some of my wed projects with only html</h2>
+<h2><a href="./public/birthday-invite.html">birthday invite project</a></h2>
 <!-- TODO 3: Take screenshots of your project previews and add the images to the images folder -->
-
+<img src="./assets/images/birthday-invite.png" alt="birthday" height="300">
 <!-- TODO 4: Add titles/subtitles etc. -->
 
 <!-- TODO 5: Add a link to the project pages -->
-
+<h2><a href="./public/./topsites.html">My top 5 websites</a></h2>
+<img src="./assets/images/top5sites.png" alt="sites" height="300">
 <!-- TODO 6: Add images to show the project previews
 HINT for TODO 6: You can use the height attribute set to 200 to make the image smaller:
 https://developer.mozilla.org/en-US/docs/Web/HTML/Element/img#attr-height -->
-
+<hr />
+<h2><a href="./public/about.html">Who am I?</a></h2>
+<br>
+<h2><a href="./public/contact.html">feel free to contact me</a></h2>
 <!-- TODO 7: Add the Contact Me and About Me page links -->
