--- a/index.html
+++ b/index.html
@@ -1,22 +1,99 @@
-<!-- TODO 1: Create the HTML Boilerplate -->
-<h1>Erfan Bensaeed</h1>
-<h2>I'm an engineer and web developer</h2>
-<hr />
-<!-- TODO 2: Add Your previous projects' HTML into the public folder -->
-<h2>Bellow you can see some of my wed projects with only html</h2>
-<h2><a href="./public/birthday-invite.html">birthday invite project</a></h2>
-<!-- TODO 3: Take screenshots of your project previews and add the images to the images folder -->
-<img src="./assets/images/birthday-invite.png" alt="birthday" height="300">
-<!-- TODO 4: Add titles/subtitles etc. -->
+<!DOCTYPE html>
+<html lang="en">
 
-<!-- TODO 5: Add a link to the project pages -->
-<h2><a href="./public/./topsites.html">My top 5 websites</a></h2>
-<img src="./assets/images/top5sites.png" alt="sites" height="300">
-<!-- TODO 6: Add images to show the project previews
-HINT for TODO 6: You can use the height attribute set to 200 to make the image smaller:
-https://developer.mozilla.org/en-US/docs/Web/HTML/Element/img#attr-height -->
-<hr />
-<h2><a href="./public/about.html">Who am I?</a></h2>
-<br>
-<h2><a href="./public/contact.html">feel free to contact me</a></h2>
-<!-- TODO 7: Add the Contact Me and About Me page links -->
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Erfan-Bensaeed</title>
+  <link rel="stylesheet" href="./style.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+  <link rel="stylesheet" href="./css/solution.css">
+</head>
+
+<body>
+
+<section class="hero gradient-color">
+    <div class="row flex-lg-row-reverse align-items-center g-5 pt-5">
+        <div class="col-10 col-sm-8 col-lg-6">
+          <img src="./images/me.jpg" class="d-block mx-lg-auto img-fluid pic-me"  alt="picture of erfan bensaeed" width="400"  loading="lazy">
+        </div>
+        <div class="col-lg-6 .ms-10">
+            <div class="bio">
+                <h1 class="display-5 fw-bold text-body-emphasis lh-1 mb-01">Erfan Bensaeed</h1>
+                <h3 class="display-8 text-body-emphasis lh-1 mb-4">Mechanical engineer and programmer</h3>
+                <p class="lead">Hello there! Welcome to my website. Here you can explore and get to know me better.</p>
+            </div>
+        </div>
+      </div>
+</section>
+<section class="hard-skills gradient-color">
+    <div class="container px-4 py-5" id="hanging-icons">
+        <h2 class="pb-2 border-bottom">Hard Skills</h2>
+        <div class="row g-4 py-5 row-cols-1 row-cols-lg-3">
+          <div class="col d-flex align-items-start">
+            <div class="icon-square text-body-emphasis bg-body-secondary d-inline-flex align-items-center justify-content-center fs-4 flex-shrink-0 me-3">
+              <img src="./images/cad.png" alt="cad image" height="60px" width="60px">
+             </div>
+             <div>
+              <h3 class="fs-2 text-body-emphasis">CAD (computer aided design)</h3>
+              <p>3D modeling with SOLIDWORKS. Want to see some of my works? click <a href="./projects/cad.html">here</a> or click below</p> 
+              <a href="./projects/cad.html" class="btn btn-light">
+                See projects
+              </a>
+
+            </div>
+          </div>
+          <div class="col d-flex align-items-start">
+            <div class="icon-square text-body-emphasis bg-body-secondary d-inline-flex align-items-center justify-content-center fs-4 flex-shrink-0 me-3">
+                <img src="./images/programming.jpg" alt="cad image" height="60px" width="60px">
+            </div>
+            <div>
+              <h3 class="fs-2 text-body-emphasis">Programming</h3> 
+              <p>I'm familiar with Python,C++ and Javascripts. You can see some projects that I've done <a href="./projects/programming.html">here </a>or click below:</p>
+              <a href="./projects/programming.html" class="btn btn-light">
+                See projects
+              </a>
+            </div>
+          </div>
+          <div class="col d-flex align-items-start">
+            <div class="icon-square text-body-emphasis bg-body-secondary d-inline-flex align-items-center justify-content-center fs-4 flex-shrink-0 me-3">
+                <img src="./images/fluent.png" alt="cad image" height="60px" width="60px">
+            </div>
+            <div>
+              <h3 class="fs-2 text-body-emphasis">CFD (Computational Fluid Dynamics)</h3>
+              <p>Done some projects in Ansys fluent. Click <a href="./projects/fluent.html">here.</a> or below:</p>
+              <a href="./projects/fluent.html" class="btn btn-light">
+                See projects
+              </a>
+            </div>
+          </div>
+        </div>
+      </div>
+</section>
+<section class="footnote gradient-color">
+    <footer class="py-3 my-4">
+        <ul class="nav justify-content-center border-bottom pb-3 mb-3">
+          <li class="nav-item"><a href="https://www.instagram.com/eribeniii/" class="nav-link px-2 text-body-secondary"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-instagram" viewBox="0 0 16 16">
+            <path d="M8 0C5.829 0 5.556.01 4.703.048 3.85.088 3.269.222 2.76.42a3.9 3.9 0 0 0-1.417.923A3.9 3.9 0 0 0 .42 2.76C.222 3.268.087 3.85.048 4.7.01 5.555 0 5.827 0 8.001c0 2.172.01 2.444.048 3.297.04.852.174 1.433.372 1.942.205.526.478.972.923 1.417.444.445.89.719 1.416.923.51.198 1.09.333 1.942.372C5.555 15.99 5.827 16 8 16s2.444-.01 3.298-.048c.851-.04 1.434-.174 1.943-.372a3.9 3.9 0 0 0 1.416-.923c.445-.445.718-.891.923-1.417.197-.509.332-1.09.372-1.942C15.99 10.445 16 10.173 16 8s-.01-2.445-.048-3.299c-.04-.851-.175-1.433-.372-1.941a3.9 3.9 0 0 0-.923-1.417A3.9 3.9 0 0 0 13.24.42c-.51-.198-1.092-.333-1.943-.372C10.443.01 10.172 0 7.998 0zm-.717 1.442h.718c2.136 0 2.389.007 3.232.046.78.035 1.204.166 1.486.275.373.145.64.319.92.599s.453.546.598.92c.11.281.24.705.275 1.485.039.843.047 1.096.047 3.231s-.008 2.389-.047 3.232c-.035.78-.166 1.203-.275 1.485a2.5 2.5 0 0 1-.599.919c-.28.28-.546.453-.92.598-.28.11-.704.24-1.485.276-.843.038-1.096.047-3.232.047s-2.39-.009-3.233-.047c-.78-.036-1.203-.166-1.485-.276a2.5 2.5 0 0 1-.92-.598 2.5 2.5 0 0 1-.6-.92c-.109-.281-.24-.705-.275-1.485-.038-.843-.046-1.096-.046-3.233s.008-2.388.046-3.231c.036-.78.166-1.204.276-1.486.145-.373.319-.64.599-.92s.546-.453.92-.598c.282-.11.705-.24 1.485-.276.738-.034 1.024-.044 2.515-.045zm4.988 1.328a.96.96 0 1 0 0 1.92.96.96 0 0 0 0-1.92m-4.27 1.122a4.109 4.109 0 1 0 0 8.217 4.109 4.109 0 0 0 0-8.217m0 1.441a2.667 2.667 0 1 1 0 5.334 2.667 2.667 0 0 1 0-5.334"/>
+          </svg> Instagram</a></li>
+          <li class="nav-item"><a href="https://ir.linkedin.com/in/erfan-bensaeed-7079621b9?original_referer=https%3A%2F%2Fsearch.yahoo.com%2F" class="nav-link px-2 text-body-secondary"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-linkedin" viewBox="0 0 16 16">
+            <path d="M0 1.146C0 .513.526 0 1.175 0h13.65C15.474 0 16 .513 16 1.146v13.708c0 .633-.526 1.146-1.175 1.146H1.175C.526 16 0 15.487 0 14.854zm4.943 12.248V6.169H2.542v7.225zm-1.2-8.212c.837 0 1.358-.554 1.358-1.248-.015-.709-.52-1.248-1.342-1.248S2.4 3.226 2.4 3.934c0 .694.521 1.248 1.327 1.248zm4.908 8.212V9.359c0-.216.016-.432.08-.586.173-.431.568-.878 1.232-.878.869 0 1.216.662 1.216 1.634v3.865h2.401V9.25c0-2.22-1.184-3.252-2.764-3.252-1.274 0-1.845.7-2.165 1.193v.025h-.016l.016-.025V6.169h-2.4c.03.678 0 7.225 0 7.225z"/>
+          </svg> Linkdin</a></li>
+          <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-envelope" viewBox="0 0 16 16">
+            <path d="M0 4a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2zm2-1a1 1 0 0 0-1 1v.217l7 4.2 7-4.2V4a1 1 0 0 0-1-1zm13 2.383-4.708 2.825L15 11.105zm-.034 6.876-5.64-3.471L8 9.583l-1.326-.795-5.64 3.47A1 1 0 0 0 2 13h12a1 1 0 0 0 .966-.741M1 11.105l4.708-2.897L1 5.383z"/>
+          </svg> email</a></li>
+          <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-telegram" viewBox="0 0 16 16">
+            <path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0M8.287 5.906q-1.168.486-4.666 2.01-.567.225-.595.442c-.03.243.275.339.69.47l.175.055c.408.133.958.288 1.243.294q.39.01.868-.32 3.269-2.206 3.374-2.23c.05-.012.12-.026.166.016s.042.12.037.141c-.03.129-1.227 1.241-1.846 1.817-.193.18-.33.307-.358.336a8 8 0 0 1-.188.186c-.38.366-.664.64.015 1.088.327.216.589.393.85.571.284.194.568.387.936.629q.14.092.27.187c.331.236.63.448.997.414.214-.02.435-.22.547-.82.265-1.417.786-4.486.906-5.751a1.4 1.4 0 0 0-.013-.315.34.34 0 0 0-.114-.217.53.53 0 0 0-.31-.093c-.3.005-.763.166-2.984 1.09"/>
+          </svg> telegram</a></li>
+        </ul>
+      </footer>
+
+</section>
+
+
+</body>
+
+
+
+</html>
